src/objects/Nielsen_Market_Summary__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Nielsen Market Summary</relationshipLabel>
        <relationshipName>Nielsen_Market_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expenditure_Amount__c</fullName>
        <label>Expenditure_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenditure_Month__c</fullName>
        <label>Expenditure_Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Major_Category__c</fullName>
        <label>Major_Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Nielsen Market Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AccountID__c</columns>
        <columns>Expenditure_Amount__c</columns>
        <columns>Expenditure_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NMS-{00000000}</displayFormat>
        <label>Nielsen Market Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nielsen Market Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>